[package]

name    = "hashmap2"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Jorge Aparicio <japaricious@gmail.com>",
           "Alexis Beingessner <a.beingessner@gmail.com>",
           "Brian Anderson <>",
           "tbu- <>",
           "Manish Goregaokar <>",
           "Aaron Turon <aturon@mozilla.com>",
           "Adolfo Ochagavía <>",
           "Niko Matsakis <>",
           "Steven Fackler <>",
           "Chase Southwood <csouth3@illinois.edu>",
           "Eduard Burtescu <>",
           "Florian Wilkens <>",
           "Félix Raimundo <>",
           "Tibor Benke <>",
           "Markus Siemens <markus@m-siemens.de>",
           "Josh Branchaud <jbranchaud@gmail.com>",
           "Huon Wilson <dbau.pp@gmail.com>",
           "Corey Farwell <coref@rwell.org>",
           "Aaron Liblong <>",
           "Nick Cameron <nrc@ncameron.org>",
           "Patrick Walton <pcwalton@mimiga.net>",
           "Felix S Klock II <>",
           "Andrew Paseltiner <>",
           "Sean McArthur <sean.monstar@gmail.com>",
           "Vadim Petrochenkov <>",
           "Carl Lerche <me@carllerche.com>"]

license     = "MIT/Apache-2.0"
description = "Fork of Rust Nightly's HashMap"
repository  = "https://github.com/carllerche/hashmap2"
homepage    = "https://github.com/carllerche/hashmap2"

[dependencies]
rand = "0.3.12"
ordermap = "*"

[dev-dependencies]
fnv = "1.0"
lazy_static = "0.2"


# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
